Added script to send Raspberry Pi CPU temp to VSCP daemon

--- a/configure.in
+++ b/configure.in
@@ -85,16 +85,6 @@ PROJ_SUBDIRS_GUI="src/vscp/vscpworks"
 AC_SUBST(PROJ_SUBDIRS_GUI)
 
 dnl
-dnl SSL mode
-dnl
-
-
-AC_ARG_ENABLE(ssl,
-[  --disable-ssl           ssl build (default enabled)],
-[vscp_ssl=no],[vscp_ssl=yes])
-dnl test "${vscp_ssl}" != "yes" && vscp_ssl="no"
-
-dnl
 dnl  Debugging mode
 dnl
 
@@ -177,7 +167,7 @@ fi
 
 CPPFLAGS="$CPPFLAGS $WX_CPPFLAGS"
 CXXFLAGS="$CXXFLAGS $WX_CXXFLAGS_ONLY"
-CFLAGS="$CFLAGS $WX_CFLAGS_ONLY $SSLFLAGS"
+CFLAGS="$CFLAGS $WX_CFLAGS_ONLY"
 LIBS="$LIBS $WX_LIBS"
 
 WX_BASENAME=`$WX_CONFIG_WITH_ARGS --basename`
@@ -192,10 +182,9 @@ fi
 
 EXTRALIBS="${EXTRALIBS} ${LIBS}" 
 
-if test "${vscp_ssl}" = yes ; then
-   CPPFLAGS="$CPPFLAGS -D MG_ENABLE_SSL"
-   CFLAGS="$CFLAGS -D MG_ENABLE_SSL"
-fi
+CPPFLAGS="$CPPFLAGS -D MG_ENABLE_SSL"
+CFLAGS="$CFLAGS -D MG_ENABLE_SSL"
+
 
 if test "${vscp_lua}" = yes ; then
    CPPFLAGS="$CPPFLAGS -D VSCP_ENABLE_LUA -I/usr/include/lua5.2"  
@@ -280,13 +269,6 @@ else
    printf "ANSI "
 fi
 
-if test "${vscp_ssl}" = "yes"
-then
-   printf "SSL "
-else
-   printf "non-SSL "
-fi
-
 if test "${vscp_lua}" = "yes"
 then
    printf "LUA "
@@ -294,23 +276,13 @@ else
    printf "non-LUA "
 fi
 
-if test "${vscp_sqlite3}" = "yes"
-then
-   printf "SQLite3 "
-else
-   printf "non-SQLite3 "
-fi
-
-
 
 printf " 
 You can tune the compiler flags in vscp-config.
 To build VSCP and friends, type \'make\' followed by \'make install\'
 
  use --enable-debug to build a debug version; release is default.
- use --disable-ssl to build a non SSL version of executables. SSL is default.
  use --disable-lua to build without LUA support. LUA support is default.
- use --disable-sglite3 to build without SQLite3 SQLite3 support is default.
  use --disable-unicode to build an ANSI version. Unicode is default.
 
  \"make\" -- builds VSCP & Friends.
