Fixed compile error and added missing files on the windows platform

--- a/src/vscp/daemon/win32/vscpd.vcxproj.filters
+++ b/src/vscp/daemon/win32/vscpd.vcxproj.filters
@@ -253,6 +253,18 @@
     <ClCompile Include="..\..\..\common\frozen.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\common\jsonreader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\common\jsonval.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\common\jsonwriter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\common\v7callbacks.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="wx\msw\blank.cur">
