--- a/src/vscp/daemon/win32/vscpd.vcxproj
+++ b/src/vscp/daemon/win32/vscpd.vcxproj
@@ -537,6 +537,9 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\common\crc8.c" />
     <ClCompile Include="..\..\..\common\frozen.c" />
+    <ClCompile Include="..\..\..\common\jsonreader.cpp" />
+    <ClCompile Include="..\..\..\common\jsonval.cpp" />
+    <ClCompile Include="..\..\..\common\jsonwriter.cpp" />
     <ClCompile Include="..\..\..\common\mongoose.c">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">EXCLUDE_COMMON;MG_ENABLE_COAP;MG_ENABLE_MQTT_BROKER;_WINSOCK_DEPRECATED_NO_WARNINGS;NS_ENABLE_EXCLUDE_COMMON;DEBUG;WIN32;_CONSOLE;WINVER=0x0601;_MT;wxUSE_GUI=0;__WXDEBUG__;WXDEBUG=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|x64'">EXCLUDE_COMMON;MG_ENABLE_COAP;MG_ENABLE_MQTT_BROKER;_WINSOCK_DEPRECATED_NO_WARNINGS;NS_ENABLE_SSL;NOEMBED_NET_SKELETON;NDEBUG;WIN32;_CONSOLE;WINVER=0x0601;_MT;wxUSE_GUI=0;WXDEBUG=0;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -563,6 +566,7 @@
     <ClCompile Include="..\..\common\tcpipclientthread.cpp" />
     <ClCompile Include="..\..\common\udpclientthread.cpp" />
     <ClCompile Include="..\..\common\userlist.cpp" />
+    <ClCompile Include="..\..\common\v7callbacks.cpp" />
     <ClCompile Include="..\..\common\vscpautomation.cpp" />
     <ClCompile Include="..\..\common\vscpcoapserver.cpp" />
     <ClCompile Include="..\..\common\vscpeventhelper.cpp" />
