Tables created from config file and config database.

--- a/Makefile.in
+++ b/Makefile.in
@@ -62,6 +62,7 @@ endif
 	@echo "   around be foolish - stay hungry! There is always a choice."
 config:
 	mkdir -p /srv/vscp/actions
+	mkdir -p /srv/vscp/drivers
 	mkdir -p /srv/vscp/web
 	mkdir -p /srv/vscp/certs
 	mkdir -p /srv/vscp/web/css
