Helper functions to get/set rmote measurement variables fixed.

--- a/src/vscp/helperlib/linux/examples/Makefile
+++ b/src/vscp/helperlib/linux/examples/Makefile
@@ -6,7 +6,7 @@ example1:	example1.c
 	cc example1.c -o example1 -I ../.. -I../../../common -I../../../../common -L.. -lvscphelper
 
 bigtest:       bigtest.c
-	cc -std=c99 bigtest.c -o bigtest -I../../../common -I../../../../common -L.. -lvscphelper
+	cc -std=c99 bigtest.c -o bigtest -I../../../common -I../../../../common -L.. -lm -lvscphelper
 
 clean:
 	rm example1
