--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -11,11 +11,11 @@ top_builddir = @top_builddir@
 top_wxbuilddir = @top_wxbuilddir@
 CC = @CC@
 CXX = @CXX@
-CFLAGS = @CFLAGS@ -D MG_ENABLE_THREADS  -D MG_ENABLE_MQTT_BROKER -D MG_ENABLE_COAP -I../../common -I../../../common
-CXXFLAGS = @CXXFLAGS@ 
-CPPFLAGS = @CPPFLAGS@ -fno-var-tracking-assignments -D MG_ENABLE_THREADS  -D MG_ENABLE_MQTT_BROKER -D MG_ENABLE_COAP -I../../common -I../../../common
-MONGOOSE_CFLAGS = -D EXCLUDE_COMMON
-V7_CFLAGS = -DV7_ENABLE_JS_GETTERS -DV7_ENABLE_JS_SETTERS -DV7_BUILD_PROFILE=3 -D V7_ENABLE_CRYPTO -D V7_ENABLE_FILE -DV7_ENABLE_SOCKET
+CFLAGS = -g -O0 -pthread  -D VSCP_ENABLE_LUA -I/usr/include/lua5.2  -I../../common -I../../../common
+CXXFLAGS = -g -O0  -D MG_ENABLE_THREADS -DMG_ENABLE_SSL
+CPPFLAGS =  -I/usr/local/lib/wx/include/gtk2-unicode-3.1 -I/usr/local/include/wx-3.1 -D_FILE_OFFSET_BITS=64 -DWXUSINGDLL -D__WXGTK__  -D VSCP_ENABLE_LUA -I/usr/include/lua5.2 -fno-var-tracking-assignments -D MG_ENABLE_THREADS  -D MG_ENABLE_MQTT_BROKER -D MG_ENABLE_COAP -I../../common -I../../../common
+MONGOOSE_CFLAGS = -DEXCLUDE_COMMON  -DMG_ENABLE_THREADS -DMG_ENABLE_MQTT_BROKER 
+V7_CFLAGS = -DV7_ENABLE_JS_GETTERS -DV7_ENABLE_JS_SETTERS -DV7_BUILD_PROFILE=3 -DV7_ENABLE_CRYPTO -DV7_ENABLE_FILE -DV7_ENABLE_SOCKET
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
 STRIP = strip
